--- a/frontend/src/components/LoginFormModal/LoginModal.css
+++ b/frontend/src/components/LoginFormModal/LoginModal.css
@@ -39,11 +39,6 @@
     font-weight: 500;
 }
 
-a {
-    color: #da3743;
-    margin: 0.5rem;
-}
-
 .account-button {
     background-color: #da3743;
     color: #fff;
